[package]
name = "kp-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.17", features = ["derive"] }
lazy_static = "1.4.0"
#regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
